deploy/kubernetes/base/namespace-gatewayclass.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nantian-gw
  labels:
    app.kubernetes.io/name: nantian-gw
    app.kubernetes.io/part-of: nantian-gw
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nantian
  labels:
    app.kubernetes.io/name: nantian-gw
    app.kubernetes.io/part-of: nantian-gw
    app.kubernetes.io/component: controlplane
spec:
  controllerName: gateway.networking.k8s.io/nantian-gw
